Jul 19, 2013 - chris ---------------------------------------------------
o issue #24: Fixed compilation problem on MacOS (Thanks, Johnathan Conley)

Jun 23, 2013 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.1

Jun 14, 2013 - chris ---------------------------------------------------
o Removed internal (but exported) functions ham_env_get_device,
	ham_env_set_device

Jun 10, 2013 - chris ---------------------------------------------------
o Improved integration of tcmalloc, removed ham_env_set_allocator

Jun 05, 2013 - chris ---------------------------------------------------
o A small semantic change: when retrieving partial records with
	ham_db_find or ham_cursor_find, the partial size is now stored in
	record.partial_size and the original size is stored in record.size.
	Previously, the partial size was stored in record.size.

May 19, 2013 - chris ---------------------------------------------------
o Merged various MacOS related fixes (thanks, Johnathan Conley)

May 10, 2013 - chris ---------------------------------------------------
o Fixed build if remote functionality is disabled (i.e. because protobuffer
	or libcurl is missing)

Mar 02, 2013 - chris ---------------------------------------------------
o Fixed JDK include paths on MacOS (Thanks, Mark Sutheran)

Feb 28, 2013 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.0

Jan 04, 2013 - chris ---------------------------------------------------
o Extended keys are now disabled by default; use HAM_ENABLE_EXTENDED_KEYS to
	enable them

Dec 26, 2012 - chris ---------------------------------------------------
o In-Memory Environments now support Transactions

Dec 25, 2012 - chris ---------------------------------------------------
o Renamed the C++ namespace from "ham" to "hamsterdb"

Dec 23, 2012 - chris ---------------------------------------------------