@@ -11,16 +11,13 @@
  */
 
 #include "config.h"
-#include "ham/hamsterdb_int.h"
 
-#ifdef HAVE_MALLOC_H
-#  include <malloc.h>
-#else
-#  include <stdlib.h>
-#endif
-#ifdef HAVE_GOOGLE_TCMALLOC_H
+#ifdef HAM_USE_TCMALLOC
+#  include <google/tcmalloc.h>
 #  include <google/malloc_extension.h>
 #endif
+
+#include <ham/hamsterdb_int.h>
 
 #include "mem.h"
 #include "os.h"
@@ -31,11 +28,10 @@ ham_u64_t Memory::ms_peak_memory;
 ham_u64_t Memory::ms_total_allocations;
 ham_u64_t Memory::ms_current_allocations;
 
-
 void
 Memory::get_global_metrics(ham_env_metrics_t *metrics)
 {
-#ifdef HAVE_GOOGLE_TCMALLOC_H
+#ifdef HAM_USE_TCMALLOC
   size_t value = 0;
   MallocExtension::instance()->GetNumericProperty(
                   "generic.current_allocated_bytes", &value);
@@ -54,7 +50,7 @@ Memory::get_global_metrics(ham_env_metrics_t *metrics)
 void 
 Memory::release_to_system()
 {
-#ifdef HAVE_GOOGLE_TCMALLOC_H
+#ifdef HAM_USE_TCMALLOC
   MallocExtension::instance()->ReleaseFreeMemory();
 #  elif WIN32
   // TODO
